--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,5 @@
 name: IBM AppConnect Enterprise - Stack
-version: 0.1.0
+version: 0.1.1
 description: IBM AppConnect Enterprise Stack
 license: Apache-2.0
 language: bash
@@ -11,3 +11,4 @@ default-template: simple
 templating-data:
   serverName: ACE_SERVER
   aceVersion: 11.0.0.6.1
+  useMQ: false
